Fixes #13368: Save button in group page is not readable in Rudder 5.0

--- a/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -217,6 +217,7 @@ pre.json-beautify.toggle:after, .content-wrapper pre.json-beautify.toggle:after{
 .content-wrapper .btn-success,.content-wrapper .btn-success[disabled]:hover {
   background-color: #9bc832;
   border-color: #8fb92a;
+  background-image: none !important;
 }
 .content-wrapper .btn-success:hover,.content-wrapper .btn-success:focus:hover  {
   background-color: #85b711;
